kubernetes/apps/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: jellyfin
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: jellyfin
      labels:
        app: radarr
    spec:
      nodeSelector:
        topology.kubernetes.io/zone: Dagobah
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:6.1.0-nightly
          ports:
            - name: http
              containerPort: 7878
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data/movies
              subPath: movies
            - name: data
              mountPath: /data/downloads
              subPath: downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: data
          persistentVolumeClaim:
            claimName: jellyfin-media
